# PicoFanController

./: CMakeLists.txt  LICENSE  README.org  main.cpp  mcp9808.hpp
doc/: output.puml
src/: fan.cpp  fan_controller.cpp
src/include/: fan.h  fan_controller.h  temp_sensor.h
